--- a/index.html
+++ b/index.html
@@ -165,6 +165,196 @@
         </ul>
       </div>
     </div>
+    <div class="box1 w">
+      <div class="box1-hd">
+        <!-- 标题 -->
+        <div class="box1-title">编程入门</div>
+        <!-- 导航栏 -->
+        <div class="box1-nav">
+          <ul class="clearfix">
+            <li><a href="#">热门</a></li>
+            <li><a href="#">初级</a></li>
+            <li><a href="#">中级</a></li>
+            <li><a href="#">高级</a></li>
+          </ul>
+        </div>
+        <!-- 查看全部 -->
+        <div class="box1-more">查看全部</div>
+      </div>
+      <div class="box1-bd">
+        <div class="router">
+          <img src="./images/box-nav.png" alt="" />
+        </div>
+        <div class="content">
+          <div class="box1-banner">
+            <img src="./images/box-banner.png" alt="" />
+          </div>
+          <ul class="clearfix">
+            <li>
+              <img src="./images/pic-1.png" alt="" srcset="" />
+              <h4>Think PHP 5.0 博客系统实战项目演练</h4>
+              <div class="info"><span>高级</span> . 1125人学习</div>
+            </li>
+            <li>
+              <img src="./images/pic-1.png" alt="" srcset="" />
+              <h4>Think PHP 5.0 博客系统实战项目演练</h4>
+              <div class="info"><span>高级</span> . 1125人学习</div>
+            </li>
+            <li>
+              <img src="./images/pic-1.png" alt="" srcset="" />
+              <h4>Think PHP 5.0 博客系统实战项目演练</h4>
+              <div class="info"><span>高级</span> . 1125人学习</div>
+            </li>
+            <li>
+              <img src="./images/pic-1.png" alt="" srcset="" />
+              <h4>Think PHP 5.0 博客系统实战项目演练</h4>
+              <div class="info"><span>高级</span> . 1125人学习</div>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="box1 w">
+      <div class="box1-hd">
+        <!-- 标题 -->
+        <div class="box1-title">数据分析师</div>
+        <!-- 导航栏 -->
+        <div class="box1-nav">
+          <ul class="clearfix">
+            <li><a href="#">热门</a></li>
+            <li><a href="#">初级</a></li>
+            <li><a href="#">中级</a></li>
+            <li><a href="#">高级</a></li>
+          </ul>
+        </div>
+        <!-- 查看全部 -->
+        <div class="box1-more">查看全部</div>
+      </div>
+      <div class="box1-bd">
+        <div class="router">
+          <img src="./images/box1-nav.png" alt="" />
+        </div>
+        <div class="content">
+          <div class="box1-banner">
+            <img src="./images/box1-banner.png" alt="" />
+          </div>
+          <ul class="clearfix">
+            <li>
+              <img src="./images/pic-1.png" alt="" srcset="" />
+              <h4>Think PHP 5.0 博客系统实战项目演练</h4>
+              <div class="info"><span>高级</span> . 1125人学习</div>
+            </li>
+            <li>
+              <img src="./images/pic-1.png" alt="" srcset="" />
+              <h4>Think PHP 5.0 博客系统实战项目演练</h4>
+              <div class="info"><span>高级</span> . 1125人学习</div>
+            </li>
+            <li>
+              <img src="./images/pic-1.png" alt="" srcset="" />
+              <h4>Think PHP 5.0 博客系统实战项目演练</h4>
+              <div class="info"><span>高级</span> . 1125人学习</div>
+            </li>
+            <li>
+              <img src="./images/pic-1.png" alt="" srcset="" />
+              <h4>Think PHP 5.0 博客系统实战项目演练</h4>
+              <div class="info"><span>高级</span> . 1125人学习</div>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="box1 w">
+      <div class="box1-hd">
+        <!-- 标题 -->
+        <div class="box1-title">机器学习工程师</div>
+        <!-- 导航栏 -->
+        <div class="box1-nav box2-nav">
+          <ul class="clearfix">
+            <li><a href="#">热门</a></li>
+            <li><a href="#">初级</a></li>
+            <li><a href="#">中级</a></li>
+            <li><a href="#">高级</a></li>
+          </ul>
+        </div>
+        <!-- 查看全部 -->
+        <div class="box1-more">查看全部</div>
+      </div>
+      <div class="box2-bd">
+        <ul class="clearfix">
+          <li>
+            <img src="./images/pic-2.png" alt="" srcset="" />
+            <h4>Think PHP 5.0 博客系统实战项目演练</h4>
+            <div class="info"><span>高级</span> . 1125人学习</div>
+          </li>
+          <li>
+            <img src="./images/pic-3.png" alt="" srcset="" />
+            <h4>Think PHP 5.0 博客系统实战项目演练</h4>
+            <div class="info"><span>高级</span> . 1125人学习</div>
+          </li>
+          <li>
+            <img src="./images/pic-4.png" alt="" srcset="" />
+            <h4>Think PHP 5.0 博客系统实战项目演练</h4>
+            <div class="info"><span>高级</span> . 1125人学习</div>
+          </li>
+          <li>
+            <img src="./images/pic-1.png" alt="" srcset="" />
+            <h4>Think PHP 5.0 博客系统实战项目演练</h4>
+            <div class="info"><span>高级</span> . 1125人学习</div>
+          </li>
+          <li>
+            <img src="./images/pic-5.png" alt="" srcset="" />
+            <h4>Think PHP 5.0 博客系统实战项目演练</h4>
+            <div class="info"><span>高级</span> . 1125人学习</div>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <div class="box1 w">
+      <div class="box1-hd">
+        <!-- 标题 -->
+        <div class="box1-title">机器学习工程师</div>
+        <!-- 导航栏 -->
+        <div class="box1-nav box2-nav">
+          <ul class="clearfix">
+            <li><a href="#">热门</a></li>
+            <li><a href="#">初级</a></li>
+            <li><a href="#">中级</a></li>
+            <li><a href="#">高级</a></li>
+          </ul>
+        </div>
+        <!-- 查看全部 -->
+        <div class="box1-more">查看全部</div>
+      </div>
+      <div class="box2-bd">
+        <ul class="clearfix">
+          <li>
+            <img src="./images/pic-2.png" alt="" srcset="" />
+            <h4>Think PHP 5.0 博客系统实战项目演练</h4>
+            <div class="info"><span>高级</span> . 1125人学习</div>
+          </li>
+          <li>
+            <img src="./images/pic-3.png" alt="" srcset="" />
+            <h4>Think PHP 5.0 博客系统实战项目演练</h4>
+            <div class="info"><span>高级</span> . 1125人学习</div>
+          </li>
+          <li>
+            <img src="./images/pic-4.png" alt="" srcset="" />
+            <h4>Think PHP 5.0 博客系统实战项目演练</h4>
+            <div class="info"><span>高级</span> . 1125人学习</div>
+          </li>
+          <li>
+            <img src="./images/pic-1.png" alt="" srcset="" />
+            <h4>Think PHP 5.0 博客系统实战项目演练</h4>
+            <div class="info"><span>高级</span> . 1125人学习</div>
+          </li>
+          <li>
+            <img src="./images/pic-5.png" alt="" srcset="" />
+            <h4>Think PHP 5.0 博客系统实战项目演练</h4>
+            <div class="info"><span>高级</span> . 1125人学习</div>
+          </li>
+        </ul>
+      </div>
+    </div>
     <!-- 尾部 -->
     <div class="footer">
       <div class="w">
